Colaboratory를 통해 생성됨

--- a/notebook/ch2_exercises_py05.ipynb
+++ b/notebook/ch2_exercises_py05.ipynb
@@ -319,19 +319,19 @@
       "metadata": {
         "colab_type": "code",
         "id": "9N_atipGZZii",
-        "outputId": "6ae64ba7-bacd-4411-f413-7c303b6faccf",
+        "outputId": "97b832ca-4a89-4284-fecd-e822519f9f31",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
         "# [Q7] Code\n",
-        "a = ['Life', 'is', 'too', 'short']\n",
+        "a = [\"Life\", \"is\", \"too\", \"short\"]\n",
         "b = \" \".join(a)\n",
         "print(b)"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
