Colaboratory를 통해 생성됨

--- a/notebook/ch2_exercises_py05.ipynb
+++ b/notebook/ch2_exercises_py05.ipynb
@@ -31,7 +31,8 @@
         "colab_type": "text"
       },
       "source": [
-        "## ch2_exercises.ipynb"
+        "## ch2_exercises.ipynb\n",
+        "###py 01"
       ]
     },
     {
@@ -331,7 +332,7 @@
         "b = \" \".join(a)\n",
         "print(b)"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
