Colaboratory를 통해 생성됨

--- a/notebook/ch2_exercises_py04.ipynb
+++ b/notebook/ch2_exercises_py04.ipynb
@@ -361,7 +361,7 @@
       "metadata": {
         "id": "JTfQQYvL5cTG",
         "colab_type": "code",
-        "outputId": "f5a921e6-29be-4e8b-f8cf-95cdb2700ffa",
+        "outputId": "7db3441e-8db8-46a4-da02-a69c4338af8a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -369,13 +369,13 @@
       },
       "source": [
         "# [Q8] Code\n",
-        "tp = (1,2,3)\n",
-        "ls = list((tp))\n",
-        "ls.append(4)\n",
-        "tp = tuple((ls))\n",
-        "print(tp)"
+        "a = (1,2,3)\n",
+        "b = list((a))\n",
+        "b.append(4)\n",
+        "a = tuple((b))\n",
+        "print(a)"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
