Colaboratory를 통해 생성됨

--- a/notebook/ch2_code01_py04.ipynb
+++ b/notebook/ch2_code01_py04.ipynb
@@ -49,9 +49,9 @@
       "source": [
         "# ch2_01_numeric.py\n",
         "#\n",
-        "print(\"숫자형: 정수\") # 동적타이핑(Dynamic typing) 변수값미리지정X\n",
+        "print(\"숫자형: 정수\") # 동적타이핑(Dynamic typing) 미리지정x\n",
         "a = 123  \n",
-        "a = -178 # a에 맨 마지막으로 바뀐 수가 출력된다.\n",
+        "a = -178\n",
         "# a = 0\n",
         "# a\n",
         "print(a)"
@@ -83,8 +83,8 @@
         "a1 = 123\n",
         "a2 = -178\n",
         "a3 = 0 \n",
-        "#a1,a2,a3 : 이때 출력값 = (123, -178, 0)\n",
-        "print(a1,a2,a3) #특정한 수를 출력할 때 print 사용\n",
+        "#a1,a2,a3 \n",
+        "print(a1,a2,a3) #출력할 때 print 사용\n",
         "a "
       ],
       "execution_count": 0,
@@ -239,7 +239,7 @@
         "print(\"숫자형: 8진수와 16진수\")\n",
         "a = 0o177\n",
         "print(a)\n",
-        "a = 0x8FF  # Hexadecimal : 16진수, 0 ~ F(0~15:16개)\n",
+        "a = 0x8FF  # Hexadecimal : 16진수, 0 ~ F\n",
         "print(a)\n",
         "a = 0xABC\n",
         "a"
@@ -326,8 +326,8 @@
         }
       },
       "source": [
-        "print(a ** b) # **, a^b = 3^4=81\n",
-        "print(a % b) # %, 나눗셈 후 나머지를 반환\n",
+        "print(a ** b)\n",
+        "print(a % b) \n",
         "print(b % a)\n",
         "a // b"
       ],
@@ -368,7 +368,7 @@
         }
       },
       "source": [
-        "14 // 3 , 14 % 3  #추플데이터형 한묶음으로 묶어줌\n"
+        "14 // 3 , 14 % 3  #추플데이터형\n"
       ],
       "execution_count": 0,
       "outputs": [
@@ -541,12 +541,12 @@
         }
       },
       "source": [
-        "print(\"문자열: \\ 이용\") # \\'(문자 작은따옴표로 표시됨) \n",
+        "print(\"문자열: \\ 이용\") \n",
         "food = 'Python\\'s favorite food is perl'\n",
-        "say = \"\\\"Python is very easy.\\\" he says.\" # \\뒤('',\"\")문자기호 자체뜻함=문자열 만드는 기호X\n",
+        "say = \"\\\"Python is very easy.\\\" he says.\"X\n",
         "print(food)\n",
         "print(say)\n",
-        "say #문자열변수로 인식 : ('작은따옴표로 감싸서 표시')"
+        "say "
       ],
       "execution_count": 0,
       "outputs": [
@@ -595,11 +595,11 @@
         }
       },
       "source": [
-        "# 이스케이프 코드(\\n) : print함수일때만 사용가능(줄바꿈가능)\n",
+        "# 이스케이프 코드(\\n)\n",
         "print(\"문자열: 이스케이프 코드 이용\")\n",
-        "multiline = \"Life is too short\\nYou need python\" #\\n : 줄바꿈\n",
-        "multiline #줄바꿈x 문자열로 Wn표시\n",
-        "print(multiline) #줄바꿈o"
+        "multiline = \"Life is too short\\nYou need python\" #\\n 줄바꿈\n",
+        "multiline\n",
+        "print(multiline)"
       ],
       "execution_count": 0,
       "outputs": [
@@ -860,16 +860,16 @@
         }
       },
       "source": [
-        "##################################### 제일중요한 하이라이트\n",
+        "##################################### \n",
         "#\n",
         "# 문자열 인덱싱과 슬라이싱\n",
         "#\n",
-        "##################################### 파이썬은 인덱스가 0부터 시작\n",
+        "##################################### 파이썬은 0부터 시작\n",
         "print(\"문자열: 인덱싱이란?\") \n",
         "a = \"Life is too short, You need Python\" # L=0, i=1 ```\n",
         "print(a[3])\n",
         "print(a[15])\n",
-        "print(a[21]) #중간고사 (인덱스는 0부터 시작)"
+        "print(a[23])"
       ],
       "execution_count": 0,
       "outputs": [
@@ -905,7 +905,7 @@
         "\n",
         "# a[12] # s\n",
         "\n",
-        "# a[-1] # n (끝에서부터 첫번째) 인벌스 인덱싱\n",
+        "# a[-1] # n \n",
         "\n",
         "# a[-0] # L\n",
         "a[-2] # o\n",
@@ -951,7 +951,7 @@
         "print(\"문자열: 슬라이싱이란?\")\n",
         "a = \"Life is too short, You need Python\"\n",
         "# Life 를 뽑아낼려면 어떻게?\n",
-        "b = a[0] + a[1] + a[2] + a[3]  # 문자열 뎌하기 연산 \"L\", \"i\" 일일히 하는 불편함 -> 슬라이싱 사용\n",
+        "b = a[0] + a[1] + a[2] + a[3]  # 문자열 뎌하기 연산 \"L\", \"i\"\n",
         "b"
       ],
       "execution_count": 0,
@@ -1049,9 +1049,9 @@
       },
       "source": [
         " # : 의 사용\n",
-        "print(a[:4]) #맨 처음부터 4까지(0~3)\n",
-        "print(a[19:]) #인덱스 19부터 끝까지(18~끝)\n",
-        "print(a[:17]) #처음부터 인덱스 17까지(0~16)"
+        "print(a[:4])\n",
+        "print(a[19:])\n",
+        "print(a[:17])"
       ],
       "execution_count": 0,
       "outputs": [
@@ -1111,7 +1111,7 @@
       "source": [
         "a[0:4]\n",
         "a[:4] \n",
-        "a[:] ##맨처음부터 마지막까지"
+        "a[:]"
       ],
       "execution_count": 0,
       "outputs": [
@@ -1141,7 +1141,7 @@
         }
       },
       "source": [
-        "# a[19:-7] ?  ##중간고사 \n",
+        "# a[19:-7] ? \n",
         "a[19:-7]"
       ],
       "execution_count": 0,
@@ -1214,9 +1214,9 @@
       },
       "source": [
         "a = \"20190917Rainy\"\n",
-        "year = a[:4] #2019  \n",
-        "day = a[4:8] #0917  \n",
-        "weather = a[8:] #Rainy\n",
+        "year = a[:4] \n",
+        "day = a[4:8] \n",
+        "weather = a[8:] \n",
         "year,day,weather"
       ],
       "execution_count": 0,
@@ -1486,7 +1486,7 @@
         "#\"rate is %s\" % 3.234\n",
         "\n",
         "# \"Error is %d%.\" % 98\n",
-        "\"Error is %d%%.\" % 98 #%를 문자로 나오게 하기위해 %%입력"
+        "\"Error is %d%%.\" % 98"
       ],
       "execution_count": 0,
       "outputs": [
@@ -1565,8 +1565,8 @@
       },
       "source": [
         "# 2. 소수점 표현하기\n",
-        "# \"%f\" % 3.42134234 #원래 f는 6째자리까지 출력\n",
-        "\"%10.4f\" % 3.42134234 #?다시보기 "
+        "# \"%f\" % 3.42134234\n",
+        "\"%10.4f\" % 3.42134234 "
       ],
       "execution_count": 0,
       "outputs": [
@@ -1754,7 +1754,7 @@
         "# \"{0:<10}\".format(\"hi\")\n",
         "# \"{0:>10}\".format(\"hi\")\n",
         "# # 가운데 정렬 \n",
-        "# \"{0:^10}\".format(\"hi\") # 10중간 정렬\n",
+        "# \"{0:^10}\".format(\"hi\")\n",
         "# # 공백 채우기\n",
         "# \"{0:=!^10}\".format(\"hi\")\n",
         "# \"{0:!<10}\".format(\"hi\")\n",
@@ -1796,7 +1796,7 @@
         "# \"{0:0.4f}\".format(y)\n",
         "# \"{0:10.4f}\".format(y)\n",
         "# { 또는 } 문자 표현하기\n",
-        "\"{{ and }}\".format() ##{{ }} 중괄호출력하기위함."
+        "\"{{ and }}\".format()"
       ],
       "execution_count": 0,
       "outputs": [
@@ -1977,7 +1977,7 @@
         "print(\"문자열: 관련 내장 함수들\")\n",
         "# 문자 개수 세기(count)\n",
         "a = \"hobby\"\n",
-        "a.count(\"b\") # a라는 문자객체에 들어있는 b의 문제객체의 개수함수"
+        "a.count(\"b\")"
       ],
       "execution_count": 0,
       "outputs": [
@@ -2015,13 +2015,13 @@
       },
       "source": [
         "# 위치 알려주기1(find)\n",
-        "a = \"Python is the best choice\" ##문자열형 객체함수\n",
+        "a = \"Python is the best choice\"\n",
         "# a.find(\"b\") \n",
-        "a.find(\"k\")  # what value? #k라는 문자가 없다면 -1출력.\n",
+        "a.find(\"k\")  # what value?\n",
         "# # 위치 알려주기2(index)\n",
         "a = \"Life is  too short\"\n",
         "# a.index(\"t\")\n",
-        "a.index(\"k\") ##없는 문자가 있을때는 index함수는 에러를 발생한다."
+        "a.index(\"k\")"
       ],
       "execution_count": 0,
       "outputs": [
@@ -2051,8 +2051,8 @@
       },
       "source": [
         "# 문자열 삽입(join)\n",
-        "# \",\".join(\"abcd\") #,(콤마)도 문자열이다.\n",
-        "\",\".join([\"a\", \"b\", \"c\", \"d\"]) #리스트구조사용([]구조)"
+        "# \",\".join(\"abcd\") \n",
+        "\",\".join([\"a\", \"b\", \"c\", \"d\"]) "
       ],
       "execution_count": 0,
       "outputs": [
@@ -2118,7 +2118,7 @@
       },
       "source": [
         "##중요~~\n",
-        "# 왼쪽 공백 지우기(lstrip) ##strip(알짜만남기고없앤다)\n",
+        "# 왼쪽 공백 지우기(lstrip)\n",
         "a = \" hi \"\n",
         "# a.lstrip()\n",
         "# 오른쪽 공백 지우기(rstrip)\n",
@@ -2186,9 +2186,8 @@
         }
       },
       "source": [
-        "##중요\n",
         "# 문자열 나누기(split) -> 리스트([])로 변환하여 반환\n",
-        "a = \"Life is too short\" ##공백으로 나눈 문자열\n",
+        "a = \"Life is too short\"\n",
         "a.split()\n",
         "# b = \"a:b:c:d\"\n",
         "# b.split(\":\")"
@@ -2221,7 +2220,7 @@
         }
       },
       "source": [
-        "#### 도전하기 ##### 중간고사 5개!!\n",
+        "#### 도전하기 #####\n",
         "# format 함수 또는 f 문자열 포매팅을 이용해서 '!!!python!!!' 문자열을 출력해보시오.\n",
         "\"{0:!^12}\".format(\"python\")\n",
         "f'{\"python\":!^12}'\n"
