Colaboratory를 통해 생성됨

--- a/notebook/ch2_code02_py04.ipynb
+++ b/notebook/ch2_code02_py04.ipynb
@@ -46,7 +46,8 @@
       "source": [
         "# ch2_code02.ipynb\n",
         "## py04\n",
-        "- List, Tuple"
+        "- List\n",
+        "- Tuple"
       ]
     },
     {
@@ -64,16 +65,16 @@
         "# ch2_04_list.py\n",
         "\n",
         "print(\"리스트: list 란?\")\n",
-        "odd = [1, 3, 5, 7, 9] # (), {}, []\n",
+        "odd = [1, 3, 5, 7, 9] # (), {}, [] #동격 타이핑 구조\n",
         "odd, type(odd)\n",
         "# 여러 가지 리스트\n",
-        "a = []   # list 초기화, null list\n",
+        "a = []   # list 초기화, null list(빈리스트)\n",
         "a\n",
         "b = [1, 2, 3]\n",
         "b\n",
         "c = ['Life', 'is', 'too', 'short']\n",
         "c\n",
-        "d = [1, 2, 'Life', 'is'] # inhomogeneous elements\n",
+        "d = [1, 2, 'Life', 'is'] # inhomogeneous elements(불균일 요소)\n",
         "d\n",
         "e = [1, 2, ['Life', 'is']] # nested list\n",
         "print(\"e =\", e, \"d =\", d)"
@@ -182,7 +183,7 @@
         "a[0]\n",
         "# a[3] # list index out of range\n",
         "a[0]+a[2]\n",
-        "a[-1]"
+        "a[-1] #맨 뒤에서 첫번째"
       ],
       "execution_count": 0,
       "outputs": [
@@ -225,7 +226,7 @@
         "a[3]\n",
         "a[-1]\n",
         "# check this: a[0] + a[-1] -> TypeError\n",
-        "# a[0] + a[-1] # unsupported operand type(s) for +: 'int' and 'list'\n",
+        "# a[0] + a[-1]\n",
         "# Indexing inner list\n",
         "a[-1][0] # 2차원 데이터 구조"
       ],
@@ -346,7 +347,7 @@
         "#\n",
         "# 리스트의 슬라이싱\n",
         "a1 = [1, 2, 3, 4, 5]\n",
-        "a1[0:2]\n",
+        "a1[0:2] #0부터 2전까지\n",
         "a2 = \"12345\"\n",
         "a1[0:2],a2[0:2]"
       ],
@@ -670,7 +671,7 @@
         "# 리스트의 수정과 삭제\n",
         "#\n",
         "a = [1, 2, 3]\n",
-        "a[2] = 4  # list is mutable!!!\n",
+        "a[2] = 4  # list is mutable!!! #변환가능\n",
         "a"
       ],
       "execution_count": 0,
@@ -760,7 +761,7 @@
         "a\n",
         "# 리스트 안에는 어떤 자료형도 추가할 수 있다.\n",
         "# 리스트에 다시 리스트를 추가한 결과\n",
-        "a.append([5, 6])\n",
+        "a.append([5, 6]) #중요?\n",
         "a"
       ],
       "execution_count": 0,
@@ -949,7 +950,7 @@
         "#\n",
         "# 리스트 요소 제거(remove)\n",
         "#\n",
-        "a = [1, 2, 3, 1, 2, 3] # 중복 값을 허용하는 데이터 구조\n",
+        "a = [1, 2, 3, 1, 2, 3] # 중복 값을 허용하는 데이터 구조 #list\n",
         "a.remove(3)\n",
         "a\n",
         "# 3을 리스트 a에서 완전히 제거\n",
@@ -1331,16 +1332,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "y5867MVgdmEL",
-        "colab_type": "text"
-      },
-      "source": [
-        "### 여기까지 ... "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "9Dm8aEzlKi-K",
         "colab_type": "text"
       },
@@ -1471,7 +1462,7 @@
         "# 튜플 곱하기\n",
         "#\n",
         "t2 = (3, 4)\n",
-        "print(id(t2))\n",
+        "print(id(t2)) #id() 변수의 메모리값이 지정되어 있음\n",
         "t2 * 3\n",
         "id(t2)\n",
         "t2 = t2 * 3\n",
@@ -1517,7 +1508,7 @@
         }
       },
       "source": [
-        "a=1\n",
+        "a=1 #1줄의 a와 3줄의 a는 다른 메모리영역에 할당\n",
         "print(id(a))\n",
         "a=a+1\n",
         "print(id(a))"
