Colaboratory를 통해 생성됨

--- a/notebook/ch5_exercises_py04.ipynb
+++ b/notebook/ch5_exercises_py04.ipynb
@@ -697,7 +697,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "80vm6aSMM3gf",
-        "outputId": "50c72560-590f-4fc9-fbfc-ca46af68cd13",
+        "outputId": "466f8820-7f2e-4110-ab94-be2674cbac62",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -708,19 +708,19 @@
         "import time \n",
         "time.strftime(\"%Y/%m/%d %H:%M:%S\") "
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'2020/06/05 13:12:32'"
+              "'2020/06/06 14:06:53'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 2
         }
       ]
     },
@@ -729,30 +729,29 @@
       "metadata": {
         "id": "Oj4p1ZzHe0MN",
         "colab_type": "code",
-        "outputId": "b225230a-1d7e-4155-bd5e-547093ac802c",
+        "outputId": "0f2070a9-34d2-4b2d-d6ae-3efcb7930ff3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         }
       },
       "source": [
-        "import time  # time 모듈을 불러온다.\n",
-        "# strftime를 이용해 날짜와 시간을 한번에 출력해주는 포맷코드로 출력하는 방법이다. \n",
-        "time.strftime(\"%x %X\")  # %c:날짜와 시간을 출력함"
+        "import time \n",
+        "time.strftime(\"%x %X\") "
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'06/05/20 13:12:33'"
+              "'06/06/20 14:06:44'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 1
         }
       ]
     },
